syntax = "proto3";

option csharp_namespace = "Jennifer.Account.Grpc";

package account;

service AccountService {
  rpc GetUserInfo (AccountUserRequest) returns (UserReply);
}

message AccountUserRequest {
  string userId = 1;
}

message UserReply {
  string userId = 1;
  string email = 2;
  string userName = 3;
}